--- a/DzLogger/.gitignore
+++ b/DzLogger/.gitignore
@@ -6,6 +6,8 @@
 # .NET Core build folders
 bin/
 obj/
+.vs/
+.idea/
 
 # Common node modules locations
 /node_modules
@@ -88,3 +90,6 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 # End of https://www.toptal.com/developers/gitignore/api/rider,dotnetcore
+/.idea/
+/.vs/
+/.idea/
